--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,8 +53,12 @@
   * {
     @apply border-border;
   }
+  html {
+    overflow-x: hidden;
+  }
   body {
     @apply bg-background text-foreground;
+    overflow-x: hidden;
   }
 }
 
